# aiogram_toolkit

./: MANIFEST.in  README.md  pyproject.toml  setup.py
aiogram_toolkit/: emojis.py  logger.py  long_msg.py  shortcuts.py
aiogram_toolkit/callback_data/safe_unpack/: decorator.py  func.py
aiogram_toolkit/deeplink/generators/: base.py  parameterized.py
aiogram_toolkit/deeplink_callback/: base.py  middleware.py  registry.py  trigger.py
aiogram_toolkit/ext/: get_file_tree.py
aiogram_toolkit/long_msg/: default_sender.py  utils.py
aiogram_toolkit/markdown/: applier.py  normalizators.py
aiogram_toolkit/md/: applier.py  escape.py
aiogram_toolkit/md/format/: html.py  md.py  md_v2.py
aiogram_toolkit/pagination/: paginated_page.py
aiogram_toolkit/sqla/async_/with_session/: function.py  handler.py
deeplink_callback/: __init__.py  base.py  config.py  registry.py
docs/: deeplink_callback.md  deeplink_callbackmd  long_msg.md
